# solcery_engine

./: .gitignore  Cargo.toml  README.md  notes
.github/workflows/: formatting.yml  tests.yml
crud/: Cargo.toml
crud/src/: lib.rs
engine/: Cargo.toml
engine/src/: entrypoint.rs
object/: Cargo.toml
object/src/: lib.rs
project/: Cargo.toml
project/src/: lib.rs
ptr_account/: Cargo.toml
storage/: Cargo.toml
storage/src/: lib.rs
template/: Cargo.toml
template/src/: lib.rs
