[package]
name = "solcery_engine"
version = "0.1.0"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
solana-program = "=1.7.8"
solcery_crud = { path = "../crud" }
solcery_template= { path = "../template" }
solcery_object = { path = "../object" }
solcery_storage = { path = "../storage" }
solcery_project = { path = "../project" }

[lib]
name = "solcery_engine"
crate-type = ["cdylib", "lib"]
