[package]
name = "solcery_object"
version = "0.1.0"
description = "Solana Program Library Record Program"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.7.8"
thiserror = "1.0.24"
borsh = "0.9.1"
borsh-derive = "0.9.0"
solcery_crud = { path = "../crud" }
solcery_storage = { path = "../storage" }
solcery_project = { path = "../project" }

[lib]
name = "solcery_object"
crate-type = ["cdylib", "lib"]
