[package]
name = "solcery_template"
version = "0.1.0"
description = "Solana Program Library Record Program"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.7.8"
thiserror = "1.0.24"
borsh = "0.9.1"
borsh-derive = "0.9.0"
num-derive = "0.3"
num-traits = "0.2"
solcery_crud = { path = "../crud" }
solcery_project = { path = "../project" }
solcery_storage = { path = "../storage" }

[lib]
name = "solcery_template"
crate-type = ["cdylib", "lib"]
